# youtube-notification-playlist

./: .gitignore  Dockerfile  README.md  configs.yml  docker-compose.yml  packages.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
base_project/: _utils.py  launch.py
base_project/common/: __init__.py  depth_logging.py  env.py  logging.py  timer.py  utils.py
youtube_notification_playlist/: _utils.py  app.py  launch.py
youtube_notification_playlist/common/: __init__.py  depth_logging.py  env.py  timer.py  utils.py
