[tool.poetry]
name = "youtube-notification-playlist"
version = "0.1.0"
description = ""
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_notification_playlist"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
