[tool.poetry]
name = "youtube-notification-playlist"
version = "0.1.0"
description = ""
authors = ["alchemine <djyoon0223@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_notification_playlist"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
notebook = "6.5.6"
jupyterthemes = "^0.20.0"
streamlit = "^1.28.2"
undetected-chromedriver = "^3.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
